started to add styling tobussines

--- a/src/app/modules/landing/pages/business-platform/business-platform.component.html
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.html
@@ -1,4 +1,4 @@
-<!-- Hero Section -->
+<!-- Hero Section
 <section class="hero d-flex align-items-center justify-content-start">
     <div class="hero-overlay"></div>
     <div class="hero-content mx-5">
@@ -26,67 +26,72 @@
 <section class="container align-content-center py-5 my-4">
     <div class="d-flex flex-column gap-2 py-2">
         <h2>Become a GFI Partner</h2>
-        <h5>We’re transforming the financial landscape, one entrepreneur at a time. We’re not just building a business;
+        <p>We’re transforming the financial landscape, one entrepreneur at a time. We’re not just building a business;
             we’re building a movement of financial professionals who are passionate about making a difference. Our goal
             is to equip individuals with the skills, knowledge, and resources they need to succeed in the world of
-            finance.</h5>
-        <h5>
+            finance.</p>
+        <p>
             We believe that everyone, regardless of their background or experience, deserves the opportunity to live a
             rich and fulfilling life. By joining our agency, you become part of a dynamic community dedicated to helping
             families secure their financial future, achieve their dreams, and create a lasting legacy. Together, we’re
             turning dreams into reality, one success story at a time.
-        </h5>
+        </p>
     </div>
-</section>
+</section> -->
 
-<section class="container align-content-center py-5 my-4">
+<!-- <section class="container align-content-center py-5 my-4">
     <div class="d-flex flex-column gap-2 py-2">
-        <h6 class="text-secondary-600">THE GFC DIFFERENCE</h6>
-        <h2 class="">Inspirational Marketing</h2>
+        <h6 class="text-secondary-600 text-center">THE GFC DIFFERENCE</h6>
+        <h2 class="text-center">Inspirational Marketing</h2>
     </div>
-    <div>
-        <h5>1. Business Ownership Opportunity</h5>
-        <p>At GFI, our primary mission is to provide individuals with a remarkable opportunity to not only succeed but
-            to become genuine owners of their businesses. In a landscape where many similar ventures no longer offer the
-            invaluable prospect of business ownership, we stand apart.</p>
-        <p>We firmly believe that your hard work should translate into actual ownership of your enterprise. With GFI,
-            you’re not merely constructing a business; you’re crafting an asset that you can proudly call your own. It’s
-            about investing your time in something that can fulfill your dreams, make a lasting impact, and serve as a
-            legacy for your family—a true testament to generational wealth. This unique ability to own and control your
-            business sets us apart and makes GFI the most appealing choice.</p>
+    <div class="row mt-5">
+        <div class="col-6">
+            <h5>1. Business Ownership Opportunity</h5>
+            <p class="mt-2">At GFI, our primary mission is to provide individuals with a remarkable opportunity to not only succeed but
+                to become genuine owners of their businesses. In a landscape where many similar ventures no longer offer the
+                invaluable prospect of business ownership, we stand apart.</p>
+            <p>We firmly believe that your hard work should translate into actual ownership of your enterprise. With GFI,
+                you’re not merely constructing a business; you’re crafting an asset that you can proudly call your own. It’s
+                about investing your time in something that can fulfill your dreams, make a lasting impact, and serve as a
+                legacy for your family—a true testament to generational wealth. This unique ability to own and control your
+                business sets us apart and makes GFI the most appealing choice.</p>
+            <button mat-flat-button>Start Here</button>
+        </div>
+        <div class="col-6">images</div>
     </div>
+    
 
-    <div>
-        <div>
+    <div class="row justify-content-end mt-5">
+        <div class="col-4 p-5 bg-accent-100 m-2">
             <h5>2. Millionaire Mentorship</h5>
-            <p>Learn everything you need to know to build a prosperous business with guidance from our dedicated
+            <p class="mt-2">Learn everything you need to know to build a prosperous business with guidance from our dedicated
                 mentors. Access valuable resources to nurture your personal and professional development, empowering you
                 to achieve your goals and secure your financial future. You’re in business for yourself, but not by
                 yourself.</p>
         </div>
-        <div>
+        <div class="col-4 p-5 bg-accent-100 m-2">
             <h5>3. Agency Owner Platform</h5>
-            <p>Experience the power of our platform, a cutting-edge technology that revolutionizes your business
+            <p class="mt-2">Experience the power of our platform, a cutting-edge technology that revolutionizes your business
                 operations. With seamless integration and robust features, our platform is designed to optimize your
                 workflow while providing you with unparalleled back-office support. It’s the ultimate tool to
                 supercharge your success as an agency owner at GFI.</p>
         </div>
     </div>
 
-    <div>
-        <div>
-            <h5>4. Industry-Leading Products</h5>
-            <p>Leverage our industry-leading product portfolio that empowers you to assist clients in building,
+    <div class="row justify-content-center bg-primary-300 p-5 mt-5">
+        <div class="col bg-white p-4 mx-4">
+            <h5 class="col-8">4. Industry-Leading Products</h5>
+            <p class="mt-2">Leverage our industry-leading product portfolio that empowers you to assist clients in building,
                 securing, and transferring their wealth. We provide top-notch solutions to help them achieve peace of
                 mind – working with 80+ top financial companies in the industry.</p>
         </div>
-        <div>
+        <div class="col bg-white p-4 mx-4">
             <h5>5. Competitive Contracts</h5>
             <p>Harness the power of the industry’s most competitive personal and builder’s contracts, providing you with
                 the means to not only thrive but also achieve your business goals. With these contracts, you’ll find
                 unparalleled opportunities for financial growth and success in your business endeavors.</p>
         </div>
-        <div>
+        <div class="col bg-white p-4 mx-4">
             <h5>6. Proven System</h5>
             <p>Utilize the proven system that has propelled GFI to unparalleled success, providing you with a reliable
                 blueprint for achieving your business objectives. Join our agency and leverage this time-tested system
@@ -94,43 +99,44 @@
                 the best!</p>
         </div>
     </div>
-</section>
+</section> -->
 
 <section class="container align-content-center py-5 my-4">
     <div class="d-flex flex-column gap-2 py-2">
-        <h6 class="text-secondary-600">Diversify Your Income</h6>
-        <h2 class="">Multiple Income Streams</h2>
+        <h6 class="text-secondary-600 text-center">Diversify Your Income</h6>
+        <h2 class="text-center">Multiple Income Streams</h2>
     </div>
-    <div>
-        <div>
+    <div class="row row-cols-3 mt-5">
+        <div class="bg-accent-100">
             <h5>Personal Income</h5>
-            <p>When you generate new business, you not only earn a commission, but your commission percentage also
+            <p class="mt-2">When you generate new business, you not only earn a commission, but your commission
+                percentage also
                 increases
                 as you reach predefined levels.</p>
         </div>
-        <div>
+        <div class="bg-accent-100">
             <h5>Residuals & Renewals income</h5>
             <p>Continue to earn income from your past efforts. With GFI, your financial rewards can keep growing over
                 time as you build and nurture your book of business.</p>
         </div>
-        <div>
+        <div class="bg-accent-100">
             <h5>Agency Income</h5>
             <p>As you expand your agency, you have the opportunity to mentor and coach newly licensed agents, and as
                 they generate new business, you can earn override commissions. You have the opportunity to earn a
                 supervisory override without impacting the agents’ earnings.</p>
         </div>
-        <div>
+        <div class="bg-accent-100">
             <h5>expansion Income</h5>
             <p>We aim to empower you not only to assist and nurture agents but also to provide financial incentives that
                 motivate individuals in Agency Owner positions to mentor others, helping them establish their own
                 businesses and become Agency Owners as well.</p>
         </div>
-        <div>
+        <div class="bg-accent-100">
             <h5>bonus Income</h5>
             <p>We provide exceptional bonus incentives to reward both performance and the positive impact we have on the
                 lives of families. We firmly believe in recognizing hard work through bonuses.</p>
         </div>
-        <div>
+        <div class="bg-accent-100">
             <h5>Stock Options & Profit Sharing</h5>
             <p>The platform is designed to empower entrepreneurs with the opportunity to create something they can truly
                 call their own, whether through stock options or even the potential to own a percentage of the company
@@ -141,10 +147,10 @@
 
 <section class="container align-content-center py-5 my-4">
     <div class="d-flex flex-column gap-2 py-2">
-        <h6 class="text-secondary-600">Where Dreams Turn To Impact</h6>
-        <h2 class="">Welcome to the GFI Family</h2>
+        <h6 class="text-secondary-600 text-center">Where Dreams Turn To Impact</h6>
+        <h2 class="text-center">Welcome to the GFI Family</h2>
     </div>
-    <div>
+    <div class="row row-cols-4">
         <div>
             <p class="">Ready to embark on a thrilling journey to financial empowerment and fulfillment?</p>
         </div>
@@ -161,18 +167,20 @@
 </section>
 
 <section class="container align-content-center py-5 my-4">
-    <div class="d-flex flex-column gap-2 py-2">
-        <h2>6 Ways To Partner With GFI</h2>
-        <p>Discover the diverse pathways to partner with GFI based on your aspirations and interests. Whether you
-            envision becoming a client, embarking on a part-time venture, diving into being an agency owner, or anything
-            in between, we offer a range of opportunities for you to align with our mission and make a meaningful impact
-            through Inspirational Marketing. </p>
-        <p>
-            Choose the path that resonates with you and join our community of change-makers.
-        </p>
-    </div>
-    <div>
-        <mat-accordion>
+    <div class="row">
+        <div class="d-flex flex-column gap-2 py-2 col-6">
+            <h2>6 Ways To Partner With GFI</h2>
+            <p>Discover the diverse pathways to partner with GFI based on your aspirations and interests. Whether you
+                envision becoming a client, embarking on a part-time venture, diving into being an agency owner, or
+                anything
+                in between, we offer a range of opportunities for you to align with our mission and make a meaningful
+                impact
+                through Inspirational Marketing. </p>
+            <p>
+                Choose the path that resonates with you and join our community of change-makers.
+            </p>
+        </div>
+        <mat-accordion class="col-6">
             @for (item of PartnerTypesOptions; track item.title) {
             <mat-expansion-panel>
                 <mat-expansion-panel-header>
@@ -187,13 +195,14 @@
             }
         </mat-accordion>
     </div>
+
 </section>
 
 <section class="container align-content-center py-5 my-4">
     <div class="d-flex flex-column gap-2 py-2">
-        <h2>Getting Started Is Easy</h2>
+        <h2 class="text-centers">Getting Started Is Easy</h2>
     </div>
-    <div>
+    <div class="row row-cols-3 align-items-center">
         <div>
             <h6>STEP 1</h6>
             <h3>Complete The Request Form</h3>
