added costants and style to business

--- a/src/app/modules/landing/pages/business-platform/business-platform.component.html
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.html
@@ -39,109 +39,56 @@
     </div>
 </section> -->
 
-<!-- <section class="container align-content-center py-5 my-4">
-    <div class="d-flex flex-column gap-2 py-2">
-        <h6 class="text-secondary-600 text-center">THE GFC DIFFERENCE</h6>
-        <h2 class="text-center">Inspirational Marketing</h2>
-    </div>
+<section class="container py-5">
+    <h2 class="text-center">Marketing Strategies</h2>
+    <!-- Primera fila -->
     <div class="row mt-5">
         <div class="col-6">
-            <h5>1. Business Ownership Opportunity</h5>
-            <p class="mt-2">At GFI, our primary mission is to provide individuals with a remarkable opportunity to not only succeed but
-                to become genuine owners of their businesses. In a landscape where many similar ventures no longer offer the
-                invaluable prospect of business ownership, we stand apart.</p>
-            <p>We firmly believe that your hard work should translate into actual ownership of your enterprise. With GFI,
-                you’re not merely constructing a business; you’re crafting an asset that you can proudly call your own. It’s
-                about investing your time in something that can fulfill your dreams, make a lasting impact, and serve as a
-                legacy for your family—a true testament to generational wealth. This unique ability to own and control your
-                business sets us apart and makes GFI the most appealing choice.</p>
-            <button mat-flat-button>Start Here</button>
+            <div>
+                <h5>{{ MarketingStrategies[0].title }}</h5>
+                <p class="mt-2" style="white-space: pre-line;">{{ MarketingStrategies[0].description }}</p>
+                <button mat-flat-button>Start Here</button>
+            </div>
         </div>
         <div class="col-6">images</div>
     </div>
-    
 
+    <!-- Segunda fila -->
     <div class="row justify-content-end mt-5">
-        <div class="col-4 p-5 bg-accent-100 m-2">
-            <h5>2. Millionaire Mentorship</h5>
-            <p class="mt-2">Learn everything you need to know to build a prosperous business with guidance from our dedicated
-                mentors. Access valuable resources to nurture your personal and professional development, empowering you
-                to achieve your goals and secure your financial future. You’re in business for yourself, but not by
-                yourself.</p>
-        </div>
-        <div class="col-4 p-5 bg-accent-100 m-2">
-            <h5>3. Agency Owner Platform</h5>
-            <p class="mt-2">Experience the power of our platform, a cutting-edge technology that revolutionizes your business
-                operations. With seamless integration and robust features, our platform is designed to optimize your
-                workflow while providing you with unparalleled back-office support. It’s the ultimate tool to
-                supercharge your success as an agency owner at GFI.</p>
+        <div class="col-4" *ngFor="let item of MarketingStrategies.slice(1, 3)">
+            <div class="p-5 bg-accent-100 m-2 h-100">
+                <h5>{{ item.title }}</h5>
+                <p class="mt-2">{{ item.description }}</p>
+            </div>
         </div>
     </div>
 
+    <!-- Tercera fila -->
     <div class="row justify-content-center bg-primary-300 p-5 mt-5">
-        <div class="col bg-white p-4 mx-4">
-            <h5 class="col-8">4. Industry-Leading Products</h5>
-            <p class="mt-2">Leverage our industry-leading product portfolio that empowers you to assist clients in building,
-                securing, and transferring their wealth. We provide top-notch solutions to help them achieve peace of
-                mind – working with 80+ top financial companies in the industry.</p>
-        </div>
-        <div class="col bg-white p-4 mx-4">
-            <h5>5. Competitive Contracts</h5>
-            <p>Harness the power of the industry’s most competitive personal and builder’s contracts, providing you with
-                the means to not only thrive but also achieve your business goals. With these contracts, you’ll find
-                unparalleled opportunities for financial growth and success in your business endeavors.</p>
-        </div>
-        <div class="col bg-white p-4 mx-4">
-            <h5>6. Proven System</h5>
-            <p>Utilize the proven system that has propelled GFI to unparalleled success, providing you with a reliable
-                blueprint for achieving your business objectives. Join our agency and leverage this time-tested system
-                to accelerate your own financial empowerment journey by using our 10 industry trade secrets that make us
-                the best!</p>
+        <div class="col bg-white p-4 mx-4" *ngFor="let item of MarketingStrategies.slice(3)">
+            <h5>{{ item.title }}</h5>
+            <p class="mt-2">{{ item.description }}</p>
         </div>
     </div>
-</section> -->
+</section>
+
+
+
 
 <section class="container align-content-center py-5 my-4">
     <div class="d-flex flex-column gap-2 py-2">
         <h6 class="text-secondary-600 text-center">Diversify Your Income</h6>
         <h2 class="text-center">Multiple Income Streams</h2>
     </div>
-    <div class="row row-cols-3 mt-5">
-        <div class="bg-accent-100">
-            <h5>Personal Income</h5>
-            <p class="mt-2">When you generate new business, you not only earn a commission, but your commission
-                percentage also
-                increases
-                as you reach predefined levels.</p>
+    <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
+        @for (item of IncomeStreamOptions; track item.title) {
+        <div class="col">
+            <div class="bg-accent-100 p-3 h-100 d-flex flex-column">
+                <h5 class="mb-2">{{item.title}}</h5>
+                <p class="mt-1">{{item.description}}</p>
+            </div>
         </div>
-        <div class="bg-accent-100">
-            <h5>Residuals & Renewals income</h5>
-            <p>Continue to earn income from your past efforts. With GFI, your financial rewards can keep growing over
-                time as you build and nurture your book of business.</p>
-        </div>
-        <div class="bg-accent-100">
-            <h5>Agency Income</h5>
-            <p>As you expand your agency, you have the opportunity to mentor and coach newly licensed agents, and as
-                they generate new business, you can earn override commissions. You have the opportunity to earn a
-                supervisory override without impacting the agents’ earnings.</p>
-        </div>
-        <div class="bg-accent-100">
-            <h5>expansion Income</h5>
-            <p>We aim to empower you not only to assist and nurture agents but also to provide financial incentives that
-                motivate individuals in Agency Owner positions to mentor others, helping them establish their own
-                businesses and become Agency Owners as well.</p>
-        </div>
-        <div class="bg-accent-100">
-            <h5>bonus Income</h5>
-            <p>We provide exceptional bonus incentives to reward both performance and the positive impact we have on the
-                lives of families. We firmly believe in recognizing hard work through bonuses.</p>
-        </div>
-        <div class="bg-accent-100">
-            <h5>Stock Options & Profit Sharing</h5>
-            <p>The platform is designed to empower entrepreneurs with the opportunity to create something they can truly
-                call their own, whether through stock options or even the potential to own a percentage of the company
-                itself.</p>
-        </div>
+        }
     </div>
 </section>
 
