--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -47,9 +47,9 @@
                     }
                 </mat-nav-list>
                 <!-- CTA Button -->
-                <button mat-raised-button class="ms-auto ms-lg-4">
+                <button mat-raised-button class="ms-auto ms-lg-4" routerLink="get-started">
                     <mat-icon iconPositionEnd>arrow_forward</mat-icon>
-                    Contact Us
+                    Get Started
                 </button>
             </mat-toolbar>
         </section>
