--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -30,7 +30,8 @@
 
     <div class="col-12 col-xl-7 align-content-center">
       <p class="text-body pt-4 px-3">
-        At GFC, <b class="text-primary-500">we focus on growing your wealth and turning it into a force for good.</b> We support you in achieving
+        At GFC, <b class="text-primary-500">we focus on growing your wealth and turning it into a force for good.</b> We
+        support you in achieving
         your
         dreams, whether it's advancing global causes, supporting your family and community, or building a lasting
         business.
@@ -49,7 +50,7 @@
 
   <div class="row py-5">
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100" appearance="outlined">
+      <mat-card class="h-100" appearance="outlined" class="transparent">
         <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
         <mat-card-content class="my-4">
           <h5>
@@ -61,7 +62,7 @@
     </div>
 
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100" appearance="outlined">
+      <mat-card class="h-100" appearance="outlined" class="transparent">
         <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
         <mat-card-content class="my-4">
           <h5>
@@ -73,7 +74,7 @@
     </div>
 
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100" appearance="outlined">
+      <mat-card class="h-100" appearance="outlined" class="transparent">
         <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
         <mat-card-content class="my-4">
           <h5>
@@ -93,7 +94,47 @@
       <h6 class="text-secondary-600">Help millions</h6>
       <h2 class="text-white">This is the greatest opportunity to help millions protect, build, and secure their wealth.
       </h2>
-      <button mat-raised-button type="button" color="accent" class="mt-4">Plan your wealth</button>
+      <button mat-raised-button type="button" color="accent" class="mt-4">Make a donation</button>
+    </div>
+  </section>
+</div>
+
+<!-- Start Shaping Your Financial Future  -->
+<div class="py-5 bg-accent-200">
+  <section class="container align-content-center">
+    <div class="row">
+      <div class="col-4 d-none d-md-block">
+        <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100" />
+      </div>
+      <div class="col-12 col-md-8">
+        <div class="py-4">
+          <h2>$68 Trillion</h2>
+          <h5>Generational Wealth is In Motion</h5>
+        </div>
+        <p class="text-body">
+          The colossal exchange of $68 trillion in generational wealth represents a tremendous opportunity to reshape individuals’ financial futures.
+        </p>
+      </div>
+    </div>
+  </section>
+</div>
+
+<!-- Protect What Matters Most  -->
+<div class="py-5 bg-accent-200">
+  <section class="container align-content-center">
+    <div class="row">
+      <div class="col-12 col-md-8">
+        <div class="py-4">
+          <h2>4.5 Billion</h2>
+          <h5>People are Financially Illiterate</h5>
+        </div>
+        <p class="text-body">
+          The alarming fact that 4.5 billion people suffer from financial illiteracy highlights the urgent need for financial guidance and support.
+        </p>
+      </div>
+      <div class="col-4 d-none d-md-block">
+        <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100" />
+      </div>
     </div>
   </section>
 </div>
@@ -182,3 +223,17 @@
 </div>
 
 <app-footer></app-footer>
+
+Help millions section for button:
+Star Now 
+Get More Info
+
+Services
+Tailored made plan for you.
+
+
+Step by step pau dont like the icons
+Diagram (more visual content).
+
+FAQ's same as GFI
+
