--- a/src/app/modules/landing/pages/contact/contact.component.html
+++ b/src/app/modules/landing/pages/contact/contact.component.html
@@ -1,119 +1,141 @@
-<section class="container-fluid landing-section">
-  CONTACT
-
-  <mat-stepper linear #stepper class="container">
-    <mat-step class="my-2">
-      <ng-template matStepLabel>Choose an option</ng-template>
-      <div class="row">
-        @for (item of ServiceOptions; track item.title) {
-        <div class="col-12 col-md-4">
-          <mat-card class="w-100">
-            <mat-card-header>
-              <mat-card-title>{{item.title}}</mat-card-title>
-            </mat-card-header>
-            <mat-card-content class="d-flex justify-content-center">
-              <div>
-                <mat-icon class="big neutral-300" aria-hidden="false" aria-label="item.label"
-                  [fontIcon]="item.icon"></mat-icon>
-              </div>
-            </mat-card-content>
-          </mat-card>
-        </div>
-        } @empty {
-        <li>There are no items.</li>
-        }
-      </div>
-
-      <div>
-        <button mat-button matStepperNext>Next</button>
-      </div>
-    </mat-step>
-
-    <mat-step [stepControl]="personalDataFormGroup" label="Fill out your data" class="my-2">
-      <form [formGroup]="personalDataFormGroup">
+<!-- Hero Section -->
+<section class="hero d-flex align-items-center justify-content-start">
+    <div class="hero-overlay"></div>
+    <div class="hero-content mx-5">
         <div class="row">
-          <div class="col-6">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Name</mat-label>
-              <input matInput formControlName="name" placeholder="Enter your name">
-            </mat-form-field>
-          </div>
-
-          <div class="col-6">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Last name</mat-label>
-              <input matInput formControlName="lastName" placeholder="Enter your last name">
-            </mat-form-field>
-          </div>
-
-          <div class="col-6">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>E-mail</mat-label>
-              <input matInput formControlName="email" placeholder="Enter your e-mail">
-            </mat-form-field>
-          </div>
-
-          <div class="col-6">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Phone</mat-label>
-              <input matInput formControlName="phone" placeholder="Enter your phone">
-            </mat-form-field>
-          </div>
-
-          <div class="col-6">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>City</mat-label>
-              <input matInput formControlName="city" placeholder="Enter your city">
-            </mat-form-field>
-          </div>
-
-          <div class="col-6">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>State</mat-label>
-              <input matInput formControlName="state" placeholder="Enter your state or province">
-            </mat-form-field>
-          </div>
-
-          <div class="col-6">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Zip code</mat-label>
-              <input matInput formControlName="zip" placeholder="Enter your ZIP or postal code">
-            </mat-form-field>
-          </div>
+            <h1 class="col-12 col-md-10 text-white ">Get in touch!</h1>
         </div>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
 
-    <mat-step class="my-2">
-      <ng-template matStepLabel>Select your service</ng-template>
-      <div class="row">
-        @for (item of InsuranceOptions; track item.title) {
-        <div class="col-12 col-md-4">
-          <mat-card class="w-100">
-            <mat-card-header>
-              <mat-card-title>{{item.title}}</mat-card-title>
-            </mat-card-header>
-            <mat-card-content class="d-flex justify-content-center">
-              <div>
-                <mat-icon class="big neutral-300" aria-hidden="false" aria-label="item.label"
-                  [fontIcon]="item.icon"></mat-icon>
-              </div>
-            </mat-card-content>
-          </mat-card>
-        </div>
-        } @empty {
-        <li>There are no items.</li>
-        }
-      </div>
+        <!-- <div class="row mt-3">
+            <h5 class="col-12 col-md-7 text-white ">
+                We look forward to connecting.
+            </h5>
+        </div> -->
+    </div>
+</section>
 
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
-      </div>
-    </mat-step>
-  </mat-stepper>
+<!-- Contact form -->
+<section class="container align-content-center py-5 my-4">
+
+    <div class="row">
+        <div class="row col-12 col-md-6">
+            <div class="d-flex flex-column text-center py-2">
+                <h2>Get in touch now!</h2>
+            </div>
+            <!-- Phone number -->
+            <div class="col-12 col-md-6 py-3">
+                <mat-card class="h-100" appearance="outlined" class="transparent">
+                    <mat-card-content class="my-4 text-center">
+                        <div class="d-flex justify-content-center">
+                            <mat-icon fontIcon="phone" class="medium secondary-600"></mat-icon>
+                        </div>
+                        <h4 class="mt-3">
+                            Phone number
+                        </h4>
+                        <p class="text-body mt-3">+52 626 922 1620</p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+
+            <!-- Email -->
+            <div class="col-12 col-md-6 py-3">
+                <mat-card class="h-100" appearance="outlined" class="transparent">
+                    <mat-card-content class="my-4 text-center">
+                        <div class="d-flex justify-content-center">
+                            <mat-icon fontIcon="mail" class="medium secondary-600"></mat-icon>
+                        </div>
+                        <h4 class="mt-3">
+                            Email
+                        </h4>
+                        <p class="text-body mt-3">Joe&#64;catalystleadershipgrp.com</p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+
+            <!-- Location -->
+            <div class="col-12 col-md-6 py-3">
+                <mat-card class="h-100" appearance="outlined" class="transparent">
+                    <mat-card-content class="my-4 text-center">
+                        <div class="d-flex justify-content-center">
+                            <mat-icon fontIcon="location_on" class="medium secondary-600"></mat-icon>
+                        </div>
+                        <h4 class="mt-3">
+                            Location
+                        </h4>
+                        <p class="text-body mt-3">3333 Michelson Dr suite 300 Irvine CA 92618</p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+
+            <!-- Working hours -->
+            <div class="col-12 col-md-6 py-3">
+                <mat-card class="h-100" appearance="outlined" class="transparent">
+                    <mat-card-content class="my-4 text-center">
+                        <div class="d-flex justify-content-center">
+                            <mat-icon fontIcon="timer" class="medium secondary-600"></mat-icon>
+                        </div>
+                        <h4 class="mt-3">
+                            Working hours
+                        </h4>
+                        <p class="text-body mt-3">?</p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6">
+            <mat-card class="bg-primary-800 h-100">
+                <form>
+                    <mat-card-header>
+                        <h6>Contact Now</h6>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <mat-form-field appearance="outline" class="w-100">
+                                    <mat-label>First Name</mat-label>
+                                    <input matInput>
+                                </mat-form-field>
+                            </div>
+
+                            <div class="col-12 col-md-6">
+                                <mat-form-field appearance="outline" class="w-100">
+                                    <mat-label>Last Name</mat-label>
+                                    <input matInput>
+                                </mat-form-field>
+                            </div>
+
+                            <div class="col-12 col-md-6">
+                                <mat-form-field appearance="outline" class="w-100">
+                                    <mat-label>E-mail</mat-label>
+                                    <input matInput>
+                                </mat-form-field>
+                            </div>
+
+                            <div class="col-12 col-md-6">
+                                <mat-form-field appearance="outline" class="w-100">
+                                    <mat-label>Phone</mat-label>
+                                    <input matInput>
+                                </mat-form-field>
+                            </div>
+
+                            <div class="col-12">
+                                <mat-form-field appearance="outline" class="w-100">
+                                    <mat-label>Message</mat-label>
+                                    <input matInput>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                    </mat-card-content>
+
+                    <mat-card-actions align="end">
+                        <button mat-raised-button type="submit">
+                            <mat-icon fontIcon="send" iconPositionEnd></mat-icon>
+                            Send
+                        </button>
+                    </mat-card-actions>
+                </form>
+            </mat-card>
+        </div>
+    </div>
 </section>
