--- a/src/app/modules/landing/pages/services/services.component.html
+++ b/src/app/modules/landing/pages/services/services.component.html
@@ -3,14 +3,7 @@
   <div class="hero-overlay"></div>
   <div class="hero-content mx-5">
     <div class="row">
-      <h1 class="col-12 col-md-7 text-white ">Tailored Financial Strategies for Your Success</h1>
-    </div>
-
-    <div class="row mt-3">
-      <h5 class="col-12 col-md-7 text-white ">
-        Discover how our personalized strategies and solutions are designed to help you achieve your financial
-        aspirations.
-      </h5>
+      <h1 class="col-12 col-md-10 text-white ">Tailored Financial Strategies for <b>Your Success</b></h1>
     </div>
   </div>
 </section>
