--- a/src/app/modules/landing/pages/business-platform/business-platform.component.html
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.html
@@ -1,5 +1,5 @@
 <!-- Hero Section -->
-<!-- <section class="hero d-flex align-items-center justify-content-start">
+<section class="hero d-flex align-items-center justify-content-start">
     <div class="hero-overlay"></div>
     <div class="hero-content mx-5">
         <div class="row">
@@ -179,7 +179,7 @@
         </div>
         }
     </div>
-</section> -->
+</section>
 
 <div class="bg-primary-800 text-white">
     <section class="container py-5 my-4" style="height: auto;">
