--- a/src/app/_shared/styles/custom.css
+++ b/src/app/_shared/styles/custom.css
@@ -12,7 +12,7 @@ h6 {
     font-family: Instrument Sans, sans-serif !important;
     font-weight: 400 !important;
     font-size: clamp(0.875rem, 1.2vw, var(--fs-md)) !important; /* Responsive for --fs-md */
-    line-height: var(--lh-sm) !important;
+    line-height: var(--lh-xsm) !important;
     letter-spacing: 0.009rem !important;
     text-transform: uppercase !important;
 }
@@ -22,7 +22,7 @@ h5 {
     color: var(--primary-900) !important;
     font-weight: 600 !important;
     font-size: clamp(1.125rem, 2vw, 1.5rem) !important;
-    line-height: var(--lh-xxlg) !important;
+    line-height: var(--lh-sm) !important;
     letter-spacing: 0.009rem !important;
 }
 
@@ -31,7 +31,7 @@ h4 {
     color: var(--primary-900) !important;
     font-weight: 400 !important;
     font-size: clamp(1.5rem, 3vw, 2.125rem) !important;
-    line-height: 2.25rem !important;
+    line-height: var(--lh-md) !important;
 }
 
 h3 {
@@ -39,7 +39,7 @@ h3 {
     color: var(--primary-900) !important;
     font-weight: 400 !important;
     font-size: clamp(2rem, 4vw, 3rem) !important;
-    line-height: 3.5rem !important;
+    line-height: var(--lh-lg) !important;
 }
 
 h2 {
@@ -47,7 +47,7 @@ h2 {
     color: var(--primary-900) !important;
     font-weight: 100 !important;
     font-size: clamp(2.5rem, 5vw, 4rem) !important;
-    line-height: 4.5rem !important;
+    line-height: var(--lh-xlg) !important;
     letter-spacing: -0.031rem !important;
 }
 
@@ -56,7 +56,7 @@ h1 {
     color: var(--primary-900);
     font-weight: 400 !important;
     font-size: clamp(4rem, 8vw, 6rem) !important;
-    line-height: 112px !important;
+    line-height: var(--lh-xxlg) !important;
     letter-spacing: -0.094rem !important;
 }
 
@@ -107,7 +107,7 @@ h1 {
     font-family: Instrument Sans, sans-serif;
     font-weight: 400;
     font-size: var(--fs-md);
-    line-height: var(--lh-xxlg);
+    line-height: var(--lh-xxsm);
     letter-spacing: 0.5px;
 }
 
@@ -116,7 +116,7 @@ h1 {
     font-family: "Montserrat";
     font-weight: 400;
     font-size: var(--fs-md);
-    line-height: var(--lh-xxlg);
+    line-height: var(--lh-xxsm);
     letter-spacing: 0.016rem;
     cursor: pointer;
     text-decoration: underline;
